--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *.xlsx
 Article wise physical parameter analysis.csv
+Coverage data.csv
+DBStrikeoff-2020.csv
+DBStrikeoff-2021.csv
+DBStrikeoff-2022.csv
 .ipynb_checkpoints/
