--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 *.xlsx
-Article wise physical parameter analysis.csv
-DBStrikeoff-2020.csv
-DBStrikeoff-2021.csv
-DBStrikeoff-2022.csv
 .ipynb_checkpoints/
+ignore
